k8s/service.yaml
apiVersion: apps/v1beta2
kind: Service
metadata:
  name: homepage-service
spec:
  type: NodePort
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
