k8s/ingress-homepage.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: homepage-service
              servicePort: 8080
